Try to fix thumbnail being too large

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -135,6 +135,11 @@ img {
   padding: 10px;
 }
 
+.gallery-wrapper{
+  height: 400px;
+  width: 860px;
+}
+
 header {
   width:230px;
   float:left;
